# data-quality-radar

./: README.md  package.json  pyproject.toml  server.js
data/: messy_customers.csv  orders_baseline.csv  orders_current.csv
docs/: NOTEBOOK_AGENT.md
public/: app.js  index.html  styles.css
radar/: __init__.py  __main__.py  core.py  demo.py  ml.py
src/: cleaningAgent.js  connectors.js  csv.js  llmProvider.js  radar.js
test/: cleaningAgent.test.js  radar.test.js  radar_agent_test.py
